Fix SonarLint for Data. LinkedList -> List
Signed-off-by: Tobias Manske <tobias.manske@mailbox.org>